# my-monorepo

./: .bazeliskrc  .bazelrc  .bazelversion  .clang-format  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  go.sum.tmpl  package.json
closure/: repositories.bzl
closure/compiler/: closure_js_binary.bzl  closure_js_library.bzl
closure/compiler/test/: BUILD
closure/compiler/test/goog_es6_interop/: BUILD
closure/compiler/test/reports/: BUILD
closure/compiler/test/strict_dependency_checking/: BUILD
closure/goog/i18n/: BUILD
closure/goog/soy/: BUILD
closure/private/: defs.bzl  file_test.bzl
closure/protobuf/test/: BUILD
closure/protobuf/test/legacy/: BUILD
closure/templates/test/: BUILD
closure/testing/: BUILD  closure_js_test.bzl  web_test_repositories.bzl  webdriver_test.bzl
closure/testing/test/: BUILD
closure/webfiles/test/: BUILD
java/io/bazel/rules/closure/: BUILD
java/io/bazel/rules/closure/testing/: BUILD
java/io/bazel/rules/closure/webfiles/: BUILD
java/io/bazel/rules/closure/webfiles/server/: BUILD
java/io/bazel/rules/closure/worker/: BUILD
sources/app/: BUILD  main.cc
sources/clo/: BUILD  ExampleModule.java  greeter.js  greeter.soy  greeter.soy.js  greeter2.soy  greeter_proto.js  greeter_proto.soy  greeter_proto_test.js  greeter_test.js  hello.css  hello.js  main.js  person.proto
sources/hello-go/: BUILD
sources/hello-rust/: BUILD.bazel
sources/hello-rust/src/: main.rs
sources/higo/: BUILD  BUILD.bazel  go.mod  main.go
sources/higo/cmd/: BUILD  roll.go  root.go
sources/higo/pkg/roll/: BUILD  roll_dice.go  roll_dice_test.go
sources/hij/: BUILD
sources/hij/src/main/java/com/example/: BUILD  GetExample.java
sources/hij/src/main/java/com/google/bazel/example/app/: MyAppServlet.java
sources/hij/webapp/WEB-INF/: appengine-web.xml  web.xml
sources/j2cl/src/main/java/com/google/j2cl/samples/guava/: BUILD  HelloGuava.java  app.js
sources/j2cl/src/main/java/com/google/j2cl/samples/helloworld/: BUILD  app.js
sources/j2cl/src/main/java/com/google/j2cl/samples/helloworldlib/: BUILD  HelloWorld.java  hello.js
tools/: deps.bzl
