module(
    name = "lemito-cpp-main-module",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.38.1")
bazel_dep(name = "gazelle", version = "0.29.0")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "nlohmann_json", version = "3.11.2")
bazel_dep(name = "fmt", version = "9.1.0")
# bazel_dep(name = "bazel_skylib", version = "1.4.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
# go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "github.com/golang/glog",
    sum = "h1:/d3pCKDPWNnvIWe0vVUpNP32qc8U3PDVxySP/y360qE=",
    version = "v1.1.0",
)
go_deps.module(
    path = "github.com/spf13/cobra",
    sum = "h1:o94oiPyS4KD1mPy2fmcYYHHfCxLqYjJOhGsCHFZtEzA=",
    version = "v1.6.1",
)
go_deps.module(
    path = "github.com/go-logr/logr",
    sum = "h1:2DntVwHkVopvECVRSlL5PSo9eG+cAkDCuckLubN+rq0=",
    version = "v1.2.3",
)
go_deps.module(
    path = "github.com/inconshreveable/mousetrap",
    sum = "h1:wN+x4NVGpMsO7ErUn/mUI3vEoE6Jt13X2s0bqwp9tc8=",
    version = "v1.1.0",
)
go_deps.module(
    path = "github.com/spf13/pflag",
    sum = "h1:iy+VFUOCP1a+8yFto/drg2CJ5u0yRoB7fZw3DKv/JXA=",
    version = "v1.0.5",
)
use_repo(go_deps, "com_github_golang_glog", "com_github_spf13_cobra", "com_github_go_logr_logr", "com_github_inconshreveable_mousetrap", "com_github_spf13_pflag") #go_deps, 