module(
    name = "lemito-cpp-main-module",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.38.1")
bazel_dep(name = "gazelle", version = "0.29.0")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "nlohmann_json", version = "3.11.2")
bazel_dep(name = "fmt", version = "9.1.0")
# bazel_dep(name = "bazel_skylib", version = "1.4.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//sources/higo:go.mod")
use_repo(go_deps, "com_github_golang_glog", "com_github_spf13_cobra", "com_github_go_logr_logr", "com_github_inconshreveable_mousetrap", "com_github_spf13_pflag") # 